feat: delegate编排P0-P2全落地；Shell新增审批门禁命令
- P0数据底座：DelegateDefinition/TodoDefinition/TodoStatus/ExecutionUnit
- P1交互与上下文：ApprovalService + REST/WebSocket/Shell审批门禁、记忆合成
- P2智能与组合：TodoDelegateOrchestrator委派编排
- Shell：/pending /approve /reject命令，普通对话改后台线程执行
- 文档：技术方案§10/§11状态标注、README、mwb-ai-claw技术方案同步